Se cambio completamente la UI para aprobechar mejor el espacio, se mejoraron las caracteristicas 'response' de todos los formularios para ser visualisados en dispositivos moviles; se agrego un nuevo moludo de perfil para dotar de nuevos campos al perfil de usuario y dar posibilidad de crear, actualizar, cambiar passord y ver un listado de usuarios del sistema; por ultimo se modifico el modelo de productos agregando un nuevo campo paradar posivilidad de mmanejar productos que no se venden por unidad (ej: medio metro ***)

--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -435,11 +435,19 @@ html { height: 100%;}
   padding-top: 6px;
 }
 .payments {
-  font-size: 1.5em; 
+  font-size: 1.5em;
 }
 /* Sombra */
 .offer{
   background:#fff; border:1px solid #ddd; box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); margin: 15px 0; overflow:hidden;
+}
+
+.offer-error{
+    background:#fff; border:1px solid #dd7a6b; box-shadow: 0 10px 20px rgba(221, 15, 15, 0.2); margin: 15px 0; overflow:hidden;
+}
+
+.offer-img{
+    background:#fff; border:1px solid rgba(66, 147, 221, 0.26); box-shadow: 0 0px 20px 0 rgba(43, 172, 227, 0.22); margin: 15px 0; overflow:hidden;
 }
 
 .mar-form{
