--- a/templates/Estadistica/venta_list.html
+++ b/templates/Estadistica/venta_list.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
+{% extends "base_v2.html" %}
+{#{% extends "base.html" %}#}
 
-{% block title %} Productos {% endblock %}
+{% block title %} Ventas {% endblock %}
 
+{% block encabezado %} Lista de ventas {% endblock %}
 
 {% block conte %}
 
