--- a/templates/Producto/marca_confirm_delete.html
+++ b/templates/Producto/marca_confirm_delete.html
@@ -1,6 +1,9 @@
-{% extends "base.html" %}
+{% extends "base_v2.html" %}
+{#{% extends "base.html" %}#}
 
-{% block title %} Eliminar producto {% endblock %}
+{% block title %} Eliminar marca {% endblock %}
+
+{% block encabezado %} Eliminar marca {% endblock %}
 
 {% block conte %}
 
