--- a/templates/Producto/marca_list.html
+++ b/templates/Producto/marca_list.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
+{% extends "base_v2.html" %}
+{#{% extends "base.html" %}#}
 
 {% block title %} Marcas {% endblock %}
 
+{% block encabezado %} Lista de marcas {% endblock %}
 
 {% block conte %}
 
@@ -23,7 +25,7 @@
 		<table class="table table-hover">
 			<thead>
 				<tr>
-					<td><strong>Producto</strong></td>
+					<td><strong>Marca</strong></td>
 				</tr>
 			</thead>
 			<tbody>
