--- a/templates/Producto/producto_confirm_delete.html
+++ b/templates/Producto/producto_confirm_delete.html
@@ -1,6 +1,9 @@
-{% extends "base.html" %}
+{% extends "base_v2.html" %}
+{#{% extends "base.html" %}#}
 
 {% block title %} Eliminar producto {% endblock %}
+
+{% block encabezado %} Eliminar producto {% endblock %}
 
 {% block conte %}
 
