--- a/templates/Venta/index.html
+++ b/templates/Venta/index.html
@@ -1,7 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_v2.html" %}
+{#{% extends "base.html" %}#}
 
-{% block title %}Ventas{% endblock %}
 
+{% block title %}Hacer ventas{% endblock %}
+
+{% block encabezado %} Hacer Venta{% endblock %}
 {% block conte %}
 
 
