--- a/templates/Venta/login.html
+++ b/templates/Venta/login.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{#{% extends "base.html" %}#}
+{% extends "base_v2.html" %}
 
 {% block title %}Login{% endblock %}
 
@@ -7,7 +8,7 @@
 	<div class="container" style="margin-top:5em;">
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
-				<div class="panel panel-default offer">
+				<div class="panel panel-default {% if form.errors %}panel-danger offer-error{% else %}offer{% endif %}">
 					<div class="panel-heading">
 						<strong> Iniciar Sesión </strong>
 					</div>
@@ -23,29 +24,23 @@
 								</div>
 								<div class="row">
 									<div class="col-sm-12 col-md-10  col-md-offset-1 ">
-                                        {% if form.errors %}
-                                            <div class="form-group has-error">
-                                        {% else %}
-                                            <div class="form-group">
-                                        {% endif %}
-                                                <div class="input-group">
-                                                    <span class="input-group-addon">
-                                                        <i class="glyphicon glyphicon-user"></i>
-                                                    </span>
-                                                    {{form.username}}
-                                                </div>
+                                        <div class="form-group{% if form.non_field_errors or form.username.errors %} has-error{% endif %}">
+                                            <div class="input-group">
+                                                <span class="input-group-addon">
+                                                    <i class="glyphicon glyphicon-user"></i>
+                                                </span>
+                                                {{form.username}}
                                             </div>
-                                        {% if form.errors %}
-										<div class="form-group has-error">
-                                        {% else %}
-                                        <div class="form-group">
-                                        {% endif %}
+                                                {{form.username.errors}}
+                                        </div>
+										<div class="form-group{% if form.non_field_errors or form.password.errors %} has-error{% endif %}">
 											<div class="input-group">
 												<span class="input-group-addon">
 													<i class="glyphicon glyphicon-lock"></i>
 												</span>
 												{{form.password}}
 											</div>
+												{{form.password.errors}}
 										</div>
 										<div class="form-group">
 											<input type="submit" class="btn btn-lg btn-primary btn-block" value="Entrar">
@@ -54,14 +49,13 @@
 								</div>
 							</fieldset>
 						</form>
-                        {% if form.errors %}
-                            <p class="text-danger text-center">
-                                Porfavor introdusca un nombre de usuario y/o contraseña validos.
-                                Considere que ambos campos son sensibles al uso de mayúsculas.
-                            </p>
-                        {% endif %}
+                            {% for x in form.non_field_errors %}
+                                <p class="text-danger text-center">
+                                    {{ x }}
+                                </p>
+                            {% endfor %}
 					</div>
-					<div class="panel-footer ">
+					<div class="panel-footer">
 						<p class="text-center">Identifiquese para poder acceder al sistema.</p>
 					</div>
                 </div>
@@ -72,7 +66,7 @@
 
 {% block script %}
     <script type="text/javascript">
-        var $codigo = $('#id_username')
+        var $codigo = $('#id_username');
         $(document).ready($codigo.focus());
     </script>
 {% endblock %}
