--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,13 @@
     <title>{% block title %}{% endblock %}</title>
     {% load staticfiles %}
     <link rel="shortcut icon" type="image/png" href="{% static "img/icon2.png" %}">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/sb-admin-2.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/timeline.css" %}">
+{#    <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap-theme.min.css" %}">#}
     <link rel="stylesheet" href="{% static "css/menu.css" %}">
-    <!--<link rel="stylesheet" type="text/css" href="{% static "css/font-awesome.min.css" %}">-->
+{#    <link rel="stylesheet" type="text/css" href="{% static "css/font-awesome.min.css" %}">#}
+
     {% block style %}{% endblock %}
 </head>
 
@@ -23,7 +27,8 @@
                         <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span><span
                             class="icon-bar"></span><span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'Venta:url_index' %}">Safe of Point</a>
+                    <a class="navbar-brand" href="{% url 'Venta:url_index' %}"><span class="glyphicon glyphicon-home"></span></a>
+
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -78,6 +83,7 @@
                             </ul>
                         </li>
                     </ul>
+                    <a class="navbar-brand">{% block encabezado %}Inicio{% endblock %}</a>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
                                 class="glyphicon glyphicon-comment"></span>Chats <span
@@ -117,7 +123,11 @@
                                 <div class="row">
                                     <div class="col-lg-4">
                                         <p class="text-center">
-                                            <span class="glyphicon glyphicon-user icon-size"></span>
+                                            {% if user.profile.avatar %}
+                                            <img src="{{ user.profile.avatar.url }}" alt="..." height="90" width="90" class="img-rounded offer-img">
+                                            {% else %}
+                                                <span class="glyphicon glyphicon-user icon-size"></span>
+                                            {%  endif %}
                                         </p>
                                     </div>
                                     <div class="col-lg-8">
@@ -303,7 +313,8 @@
 
 <!-- Scripts -->
 <script src="{% static 'js/jquery.1.11.2.min.js' %}"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+{#<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>#}
 <script src="{% static "js/menu.js" %}"></script>
 {% block script %}{% endblock %}
 </body>
