Correccion de zona horaria y iconos corregidos en lista de productos (venta por unidad)

--- a/templates/Producto/producto_list.html
+++ b/templates/Producto/producto_list.html
@@ -90,7 +90,7 @@
                         <td class="hidden-xs"><a href='{% url 'Producto:url_actualizar_marca' prod.marca.id %}'
                                                  class="btn btn-primary btn-xs btn-block">{{prod.marca.marca}}</a>
                         </td>
-                        <td class="hidden-xs text-center">{{prod.vunidad|yesno:'<i class="fa f fa-thumbs-o-down text-green"></i>,<i class="fa f fa-thumbs-o-up text-red"></i>'|safe}}</td>
+                        <td class="hidden-xs text-center">{{prod.vunidad|yesno:'<i class="fa f fa-thumbs-o-up text-green"></i>,<i class="fa f fa-thumbs-o-down text-red"></i>'|safe}}</td>
                         <td class="hidden-xs">$ {{prod.punitario}}</td>
                         <td class="hidden-xs">$ {{prod.pmayoreo}}</td>
                         <td><a href=""></a>
